--- a/page2.html
+++ b/page2.html
@@ -42,7 +42,7 @@ body,h1,h2,h3,h4,h5 {font-family: "body,h1,h2,h3,h4,h5 {font-family: "Raleway", 
 
   <a href="#follow" onclick="w3_close()" class="w3-bar-item w3-button">Follow Me</a>
 
-   <a href="#write" onclick="w3_close()" class="w3-bar-item w3-button">Contribute</a>                                                                
+   <!-- <a href="#write" onclick="w3_close()" class="w3-bar-item w3-button">Contribute</a>  -->                                                              
 
 </nav>
 
@@ -94,25 +94,25 @@ and is wrapped around the whole page content, except for the footer in this exam
 
   <div class="w3-card-4 w3-margin w3-white">
 
-    <img src="Photo.jpg" alt="Failed to load" style="width:100%">
+    <img src=".jpg" alt="Not yet captured..." style="width:100%">
 
     <div class="w3-container">
 
-      <h3><b>MY FIRST POST</b></h3>
+      <h3><b>Next post coming soon...</b></h3>
 
-      <h5>Nothing to do, <span class="w3-opacity">August 20, 2020</span></h5>
+      <h5>Description under construction, <span class="w3-opacity">October 20, 2020</span></h5>
 
     </div>
 
     <div class="w3-container">
 
-      <p>I was thinking what should i write on my first blog post should it be inspirational one or just an introductory and now ending up my thoughts saying that yes <b> "I'M ON"</b> i have 
+     <!-- <p>I was thinking what should i write on my first blog post should it be inspirational one or just an introductory and now ending up my thoughts saying that yes <b> "I'M ON"</b> i have 
 
 nothing to do right now the virus has downed upon my life shattered my hopes and i am up with my first post.
 
       <br> I am feeling empty it's a new emotional state i had never suffered and at times it gets worse that's why i am starting my blog...
 
-      </p>
+      </p> -->
 
       <div class="w3-row">
 
@@ -140,13 +140,13 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
 
   <div class="w3-card-4 w3-margin w3-white">
 
-  <img src="Beginning.jpg" alt="Failed to load" style="width:100%">
+  <img src=".jpg" alt="Not yet captured" style="width:100%">
 
     <div class="w3-container">
 
       <h3><b>Next entry coming soon...</b></h3>
 
-      <h5>Description under construction, <span class="w3-opacity">August 31, 2020</span></h5>
+      <h5>Description under construction, <span class="w3-opacity">October 31, 2020</span></h5>
 
     </div>
 
@@ -198,7 +198,7 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
 
       <h3><b>Next post coming soon</b></h3>
 
-      <h5>Description under construction, <span class="w3-opacity">September 20, 2020</span></h5>
+      <h5>Description under construction, <span class="w3-opacity"></span></h5>
 
     </div>
 
@@ -242,7 +242,7 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
 
       <h3><b>Next post coming soon...</b></h3>
 
-      <h5>Description under construction, <span class="w3-opacity">September 31, 2020</span></h5>
+      <h5>Description under construction, <span class="w3-opacity"></span></h5>
 
     </div>
 
@@ -280,7 +280,7 @@ nothing to do right now the virus has downed upon my life shattered my hopes and
 
                                                                                                               
 
-<!-- Introduction menu-->
+<!-- <!-- Introduction menu-->
 
    <h1 id="write"></h1>                                                                                                           
 
@@ -312,7 +312,7 @@ blog reader to contribute in my blog post....
 
     <h6><button class="w3-button w3-red w3-padding-large w3-large w3-opacity w3-hover-opacity-off" onclick="document.getElementById('subscribe').style.display='block'">CONTRIBUTE</button></h6>                                                                                                          
 
-    </div>
+    </div> -->
 
   </div><hr>
 
@@ -514,7 +514,7 @@ and here on my blog you will find some real <s>shit</s> stuff.<br><i>So stay con
 
 <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
 
-  <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
+  <button class="w3-button w3-black w3-padding-large w3-margin-bottom"><a href="index.html">Previous</a></button>
 
   <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Next »</button>
 
